--- a/undergrad-projects.html
+++ b/undergrad-projects.html
@@ -29,6 +29,7 @@
                     <li><a href="skills.html">Skills</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="blog.html">Blog</a></li>
+                    <li><a href="certifications.html">Certifications</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,19 +38,23 @@
     <section id="undergrad-projects" class="section">
         <h2>Undergraduate Projects</h2>
         <div class="container">
-            <!-- Add your undergraduate projects here -->
             <div class="project">
                 <h3>Online Voting System</h3>
-                <p>Revolutionizing voting with a web app allowing secure, convenient voting from personal computers. Ideal for college and institutional elections.</p>
+                <p>Developed a web application to revolutionize voting by allowing secure and convenient voting from personal computers. Ideal for college and institutional elections.</p>
                 <p><strong>Technology Used:</strong> HTML, CSS, JavaScript, Django, MySQL, Twilio, Microsoft Azure</p>
             </div>
 
             <div class="project">
                 <h3>QR Scan Ticket Validator</h3>
-                <p>Streamlined ticket verification and fine management system: Introducing a phone app-based system with QR codes for secure, efficient ticketing.</p>
+                <p>Streamlined Ticket Verification and Fine Management System: Introduced a mobile application-based system with QR codes for secure and efficient ticket verification. Features time-based deletion and cloud storage for enhanced efficiency and security.</p>
                 <p><strong>Technology Used:</strong> Java, JSON, PHP, 000webhosting</p>
             </div>
-            <!-- Add more undergraduate projects -->
+
+            <div class="project">
+                <h3>Traffic Sign Board Detection</h3>
+                <p>Developed a model capable of accurately identifying traffic signboards on the side of the road. This model aids self-driving cars in recognizing traffic signs and responding by adjusting speed or taking necessary precautions.</p>
+                <p><strong>Technology Used:</strong> YOLOv5</p>
+            </div>
         </div>
     </section>
 
