--- a/research-projects.html
+++ b/research-projects.html
@@ -15,8 +15,6 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="education.html">Education</a></li>
-
-                    <!-- Dropdown for Projects -->
                     <li class="dropdown">
                         <a href="#" class="dropbtn">Projects</a>
                         <div class="dropdown-content">
@@ -25,10 +23,10 @@
                             <a href="personal-projects.html">Personal Projects</a>
                         </div>
                     </li>
-
                     <li><a href="skills.html">Skills</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="blog.html">Blog</a></li>
+                    <li><a href="certifications.html">Certifications</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,19 +35,53 @@
     <section id="research-projects" class="section">
         <h2>Research Projects</h2>
         <div class="container">
-            <!-- Add your research projects here -->
             <div class="project">
-                <h3>Adapt2Detect: Cooperative Learning Framework for Low-Light Object Detection</h3>
-                <p>Designed an adaptive multi-sensory pipeline combining LiDAR and camera inputs to optimize object detection under varying lighting conditions.</p>
-                <p><strong>Technology Used:</strong> MATLAB, YOLO, Python</p>
+                <h3>Adapt2detect: Cooperative Learning Framework for Low-Light Object Detection</h3>
+                <p>Designed an adaptive multi-sensory pipeline that combines LiDAR and camera inputs to optimize object detection under low-light conditions. Reduced false positives by 25%.</p>
+                <p><strong>Technology Used:</strong> MATLAB, YOLOv8, Python</p>
             </div>
 
             <div class="project">
                 <h3>Real-Time Object Detection using LiDAR and PointPillars Algorithm</h3>
-                <p>Developed a real-time object detection system using LiDAR sensors, leveraging the PointPillars algorithm for efficient 3D object detection.</p>
+                <p>Developed a real-time object detection system using LiDAR sensors, utilizing the PointPillars algorithm for efficient 3D object detection. Enhanced situational awareness for autonomous navigation through real-time detection and tracking of objects.</p>
                 <p><strong>Technology Used:</strong> PointPillars, Python, PCL, ROS</p>
             </div>
-            <!-- Add more research projects -->
+
+            <div class="project">
+                <h3>3D Scene Reconstruction Using SLAM</h3>
+                <p>Engineered a 3D scene reconstruction system using SLAM algorithms to achieve sub-centimeter accuracy in environmental mapping. Integrated ROS with custom SLAM algorithms to facilitate real-time data acquisition and processing.</p>
+                <p><strong>Technology Used:</strong> SLAM algorithms, ROS, Python, C++</p>
+            </div>
+
+            <div class="project">
+                <h3>Parking Assistance using LiDAR and Camera</h3>
+                <p>Implemented a parking assistance system using both LiDAR and camera data to assist in safe parking by detecting nearby obstacles and providing real-time feedback to drivers.</p>
+                <p><strong>Technology Used:</strong> LiDAR, Camera, Python, ROS</p>
+            </div>
+
+            <div class="project">
+                <h3>Pothole Detection using LiDAR</h3>
+                <p>Designed a pothole detection system using LiDAR data to identify irregularities on road surfaces. The system is optimized for real-time operation, providing crucial information for road maintenance.</p>
+                <p><strong>Technology Used:</strong> LiDAR, Python, PCL</p>
+            </div>
+
+            <div class="project">
+                <h3>Real-Time Object Detection in a 3D Generated Map using SLAM</h3>
+                <p>Created a real-time object detection system integrated with SLAM to detect objects in 3D maps generated dynamically from the SLAM process.</p>
+                <p><strong>Technology Used:</strong> SLAM, LiDAR, Python, ROS</p>
+            </div>
+
+            <div class="project">
+                <h3>LiDAR Real-Time Visualization</h3>
+                <p>Developed a tool for real-time visualization of LiDAR data to assist with environmental analysis and object detection tasks in dynamic scenarios.</p>
+                <p><strong>Technology Used:</strong> LiDAR, Python, PCL, ROS</p>
+            </div>
+
+            <div class="project">
+                <h3>Real-Time Object Detection using LiDAR</h3>
+                <p>Developed a system for real-time object detection using LiDAR data. The system focuses on processing large amounts of LiDAR data efficiently to provide accurate object detection in dynamic environments.</p>
+                <p><strong>Technology Used:</strong> LiDAR, Python, PCL</p>
+            </div>
         </div>
     </section>
 
