--- a/personal-projects.html
+++ b/personal-projects.html
@@ -15,8 +15,6 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="education.html">Education</a></li>
-
-                    <!-- Dropdown for Projects -->
                     <li class="dropdown">
                         <a href="#" class="dropbtn">Projects</a>
                         <div class="dropdown-content">
@@ -25,10 +23,10 @@
                             <a href="personal-projects.html">Personal Projects</a>
                         </div>
                     </li>
-
                     <li><a href="skills.html">Skills</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="blog.html">Blog</a></li>
+                    <li><a href="certifications.html">Certifications</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,13 +35,41 @@
     <section id="personal-projects" class="section">
         <h2>Personal Projects</h2>
         <div class="container">
-            <!-- Add your personal projects here -->
             <div class="project">
                 <h3>Personal Web Portfolio</h3>
-                <p>Showcasing a diverse portfolio of innovative projects and a strong skill set in full-stack development to drive results and inspire creativity.</p>
+                <p>Showcasing a diverse portfolio of innovative projects and a strong skill set in full-stack development. Designed to drive results and inspire creativity.</p>
+                <p><strong>Technology Used:</strong> HTML, CSS, JavaScript, React, Node.js, MongoDB</p>
             </div>
 
-            <!-- Add more personal projects -->
+            <div class="project">
+                <h3>Trading Algorithm and Real-Time Visualization</h3>
+                <p>Developed a trading algorithm with real-time visualization by integrating data from financial market APIs. The system allows for dynamic strategy backtesting and visualization of trading signals.</p>
+                <p><strong>Technology Used:</strong> Python, Pandas, Matplotlib, REST APIs</p>
+            </div>
+
+            <div class="project">
+                <h3>Generative AI and LLM Project for Autonomous Vehicles</h3>
+                <p>Worked on developing generative AI models and Large Language Models (LLMs) to enhance decision-making processes in autonomous vehicle systems. The project focused on advanced problem-solving using AI techniques.</p>
+                <p><strong>Technology Used:</strong> Python, TensorFlow, PyTorch, Generative AI, LLM</p>
+            </div>
+
+            <div class="project">
+                <h3>Data Annotation for Large LiDAR Datasets</h3>
+                <p>Designed an efficient data annotation pipeline to handle large-scale LiDAR datasets, facilitating better training for machine learning models.</p>
+                <p><strong>Technology Used:</strong> Python, OpenCV, LabelFusion, ROS</p>
+            </div>
+
+            <div class="project">
+                <h3>Low-Light Image Generation</h3>
+                <p>Created a system for generating enhanced low-light images using image processing and machine learning techniques, improving image quality in low-light conditions.</p>
+                <p><strong>Technology Used:</strong> Python, OpenCV, GANs</p>
+            </div>
+
+            <div class="project">
+                <h3>RGB to PCD Conversion</h3>
+                <p>Developed a conversion system that transforms RGB image data into Point Cloud Data (PCD) for LiDAR applications, enabling real-time 3D scene representation.</p>
+                <p><strong>Technology Used:</strong> Python, OpenCV, PCL</p>
+            </div>
         </div>
     </section>
 
