--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
               </li>
 
               <li><a href="skills.html">Skills</a></li>
+               <li><a href="certifications.html">Contact</a></li>
               <li><a href="contact.html">Contact</a></li>
               <li><a href="blog.html">Blog</a></li>
           </ul>
