--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
                   </div>
               </li>
 
-              <li><a href="skills.html">Skills</a></li>
-               <li><a href="certifications.html">Contact</a></li>
+             <li><a href="skills.html">Skills</a></li>
+               <li><a href="certifications.html">Certifications</a></li>
               <li><a href="contact.html">Contact</a></li>
               <li><a href="blog.html">Blog</a></li>
           </ul>
